--- a/src/index.css
+++ b/src/index.css
@@ -3,7 +3,7 @@
 @tailwind utilities;
 
 .contactInput {
-  @apply outline-none bg-slate-100 rounded-md border-b px-6 py-4 border-[#242424] text-gray-500 transition-all placeholder-gray-500 focus:border-[#39ff14]/40 focus:text-[#39ff14]/40 hover:border-[#39ff14]/40;
+  @apply outline-none bg-slate-100 rounded-md border-b px-6 py-4 border-[#242424] text-gray-500 transition-all placeholder-gray-500 focus:border-[#39ff14]/40 focus:text-gray-600 hover:border-[#39ff14]/40;
 }
 
 .marquee {
